# voodoo_engine

./: .gitignore  CMakeLists.txt
domain/: CMakeLists.txt
domain/include/domain/: config.h  database.h  logger.h  mappers.h
domain/src/: database.c  logger.c  mappers.c
infrastructure/: CMakeLists.txt
infrastructure/include/infrastructure/: context.h  fanotify_event_batch.h  fanotify_event_consumer.h  fanotify_monitor.h  file_system_event.h  file_system_event_consumer.h  file_system_monitor.h  helpers.h  plugin_interface.h  plugin_manager.h  quarantine.h  unix_control_server.h
infrastructure/src/: context.c  fanotify_event_consumer.c  fanotify_monitor.c  file_system_event_consumer.c  file_system_monitor.c  helpers.c  plugin_manager.c  quarantine.c  unix_control_server.c
presentation/: CMakeLists.txt
presentation/include/presentation/: signal_handler.h
presentation/src/: main.c  signal_handler.c
